# op_parser

./:  LICENSE  .gitignore  LICENSE  README.md  example.py  pyproject.toml  setup.py
src/op_parser/: __init__.py  downloader.py  iaga_downloader.py  iaga_parser.py  op_parser.py  utils.py
tests/: test_downloader.py  test_full_work.py  test_iaga_parser.py  test_op_parser.py  test_utils.py
