[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "op_parser"
version = "0.1.0"
description = "Library for downloading and parsing Op and IAGA-2002 format files"
authors = [
    {name = "31", email = "xhispeco2018@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
keywords = ["op", "iaga-2002", "parser", "ftp", "data"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.7"

[project.urls]
"Repository" = "https://github.com/31iwnl/op_parser"
